Revision history for {{$dist->name}}

{{$NEXT}}

2.018     2013-08-04 03:25:37 Europe/Paris
 - delay inserting the list of modules to check until after all plugins have
   had an opportunity to add files (found via RT#87562)
 - fail_on_warning setting now also takes into consideration the results of
   script compilation checks

2.017     2013-08-03 19:06:44 Europe/Paris
 - fix conflicts metadata entry for Test::Kwalitee::Extra (I misinterpreted
   the metaspec as to what conflicts actually means!)

2.016     2013-08-02 19:48:44 Europe/Paris
 - convert Foo\Bar.pm to Foo/Bar.pm for proper %INC retrieval on win32
   (thanks, haarg!)

2.015     2013-08-02 19:22:28 Europe/Paris
 - fix double-quoting of file paths in require statement, introduced in v2.006
   (thanks, Peter Shangov!)

2.014     2013-08-01 03:37:00 Europe/Paris
 - fix install tests on win32, broken since 2.011 (RT#84781)
 - properly munge filenames on win32 (broken since 2.013)

2.013     2013-07-30 20:54:52 Europe/Paris
 - .pm files are tested with -Mblib again; 2.012 was a mistake.
 - now require()ing files without the leading lib/, to avoid potentially
   loading files twice (a problem since 2.009) - thanks dolmen and haarg!

2.012     2013-07-30 20:12:53 Europe/Paris
 - .pm files are once again tested with -Ilib, instead of -Mblib, to avoid
   potentially loading files twice (this was changed in 2.009).

2.011     2013-07-28 23:45:53 Europe/Paris
 - .pod files are now always omitted from the list of found modules in the
   dist (thanks for the report, Alberto Simões!)

2.010     2013-07-27 01:45:51 Europe/Paris
 - add conflicts metadata for Test::Kwalitee::Extra, which does not like the
   require() syntax we use
 - all changes since 2.002 now as a stable release:

   [FEATURES]
   - new fail_on_warning option
   - the 'skip' option can now be provided multiple times
   - calculate the list of files to check at build time, rather than using